fixed space clipping

--- a/client/sass/layout/_container.scss
+++ b/client/sass/layout/_container.scss
@@ -1,4 +1,6 @@
 section.container {
+    width:  10000vw;
+    height: 10000vh;
     position: fixed;
     cursor: text;
     
